# ncdu-import

./: .cspell.json  Cargo.toml  README.md
src/: filetree.rs  import.rs  main.rs  ncdu.rs
testdata/: duplicate.csv  duplicate_with_trailing_slash.csv  duplicate_with_trailing_slash.json  ensure_sort_order.csv  ensure_sort_order.json  multidir.csv  multidir.json  simple.csv  simple.json  trivial.csv  trivial.json  trivial_nested.csv  trivial_nested.json
