[package]
name = "ncdu-import"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
eyre = "0.6.8"
goldenfile = "1.6.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
serde = { version = "1.0.192", features = ["std", "derive"] }
serde_json = "1.0.108"
