# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ncdu-import"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lutzky/ncdu-import"
description = "Utility for importing CSV files into a format readable by ncdu"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.2"
eyre = "0.6.8"
goldenfile = "1.6.0"
log = "0.4.21"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
serde = { version = "1.0.192", features = ["std", "derive"] }
serde_json = "1.0.108"
